--- a/po/translated/de/business.html
+++ b/po/translated/de/business.html
@@ -7,7 +7,7 @@
   <body>
     <div id="background"></div>
     
-	<h1 class="title">Business Anwendungen</h1>
+	<h1 class="title">Geschäfts-Anwendungen</h1>
 
 	<div class="main">
 		<div class="content">
@@ -15,10 +15,10 @@
 			<table>
 				<tr>
 					<td colspan="2">
-						<p>Das ist eine Aufzählung von geeigneten Business Anwendungen.</p>
-						<p>Wenn Sie den Installationsschaltfläche anklicken, werden alle aufgeführten
-Programme auf Ihrem System installiert. Sie können den Software Manager
-benutzen, um diese gesondert zu installieren.</p>
+						<p>Das ist eine Liste von geeigneten Business Anwendungen.</p>
+						<p>Wenn Sie "Installieren" auswählen, werden alle aufgeführten Programme auf
+Ihrem System installiert. Einzeln können sie mit dem Software Manager
+installiert werden.</p>
 					</td>
 				</tr>
 				<tr><td colspan="2" class="app_title">Gnucash</td></tr>
@@ -26,12 +26,11 @@ benutzen, um diese gesondert zu installieren.</p>
 					<td>
 						<p>GnuCash ist eine Finanzbuchhaltungssoftware für Heimanwender und kleine
 Unternehmen.</p>
-						<p>Entwickelt mit dem Fokus auf einfache Handhabung ist die Software dennoch
-leistungsfähig und flexibel. GnuCash erlaubt es Ihnen Bankkonten, Aktien,
-Erträge und Aufwendungen im Auge zu behalten. So schnell und intuitiv zu
-bedienen wie ein Scheckheftregister basiert sie auf professionelle
-Buchhaltungsprinzipien um eine ausgewogene Buchhaltung und genaue Berichte
-zu gewährleisten. </p>
+						<p>Komplettlösung zur Verwaltung der Finanzen von Privatanwendern und
+Kleinbetrieben, basierend auf dem Prinzip der doppelten
+Buchführung. Homebanking wird ebenso unterstützt wie die Verwaltung von
+Kunden, Lieferanten und Rechnungen, Import von OFX und QIF, zahlreiche
+Berichte und Grafiken und eine benutzerdefinierbare Oberfläche.</p>
 					</td>
 					<td rowspan="2"><img class="screenshot" alt="gnucash" src="../link/screenshots/gnucash.jpg" /></td>
 				</tr>
@@ -42,17 +41,17 @@ target="_blank">http://www.gnucash.org</a></td>
 				<tr><td colspan="2" class="app_title">Dolibarr</td></tr>
 				<tr>
 					<td>
-						<p>Dolibarr ERP- und CRM ist eine moderne und einfach zu bedienende
-Web-Verwaltungssoftware für Ihr Unternehmen (Kontakte, Rechnungen,
-Bestellungen, Produkte, Aktien, Tagesordnung, E-Mailings,etc...).</p>
-						<p>Beim ersten Durchlauf wird eine endgültige Konfiguration gestartet. Sie
+						<p>Dolibarr ERP & CRM ist eine moderne und leicht zu bedienende webbasierte
+Software zur Verwaltung von Unternehmen oder Vereinen (Kontakte, Mitglieder,
+Rechnungen, Aufträge, Produkte, Lagerbestand, E-Mails usw.).</p>
+						<p>Beim ersten Durchlauf wird die endgültige Konfiguration gestartet. Sie
 müssen die folgenden Informationen angeben:</p>
 						 <ul>
 							 <li>Passwort für den  Dolibarr Datenbankbenutzer: dolibarr</li>
 							 <li>Superuser Zugang: root / Ihr Root Passwort</li>
-							 <li>Dolibarr admin login : admin / admin</li>
+							 <li>Dolibarr Administrator-Login : admin / admin</li>
 						 </ul>
-						<p>Ersetzen Sie Ihr "your_root_password" mit your root password.</p>
+						<p>Ersetzen Sie Ihr "your_root_password" mit Ihrem Root-Passwort.</p>
 					</td>
 					<td rowspan="2"><img class="screenshot" alt="dolibarr" src="../link/screenshots/dolibarr.jpg" /></td>
 				</tr>
@@ -63,13 +62,13 @@ target="_blank">http://www.dolibarr.org</a></td>
 				<tr><td colspan="2" class="app_title">Letodms</td></tr>
 				<tr>
 					<td>
-						<p>LetoDMS ist ein Open-Source-Web-basiertes Dokumentenmanagementsystem (DMS)
-in PHP mit einem Datenbank-Backend geschrieben. LetoDMS bietet
+						<p>LetoDMS ist ein quelloffenes Web-basiertes Dokumentenmanagementsystem (DMS)
+mit einem Datenbank-Backend geschrieben, geschrieben in PHP. LetoDMS bietet
 Dokument-Metadaten, Versionskontrolle, Sicherheit und einfachen Zugriff auf
 Ihre Dokumente.</p>
 						<p>Login mit: admin / admin</p>
 						<p>Sie können die Dolibarr und Letodms Datenbanken mit phpMyAdmin verwalten
-(Benutzername: root / your_root_password)</p>
+(Benutzername: root / Root-Passwort)</p>
 					</td>
 					<td rowspan="2"><img class="screenshot" alt="letodms" src="../link/screenshots/letodms.jpg" /></td>
 				</tr>
@@ -80,8 +79,8 @@ target="_blank">http://www.letodms.com</a></td>
 				<tr><td colspan="2" class="app_title">ProjectLibre</td></tr>
 				<tr>
 					<td>
-						<p>Projectlibre ist ein Projekt-Management-Software-System. Sie beabsichtigt,
-ein vollständiger Desktop-Ersatz für Microsoft Project zu sein.</p>
+						<p>ProjectLibre ist ein Projekt-Management-System, das anstrebt, ein
+vollständiger Desktop-Ersatz für Microsoft Project zu sein.</p>
 					</td>
 					<td rowspan="2"><img class="screenshot" alt="projectlibre" src="../link/screenshots/projectlibre.jpg" /></td>
 				</tr>
