--- a/po/translated/de/home.html
+++ b/po/translated/de/home.html
@@ -14,22 +14,22 @@
 			<table>
 				<tr>
 					<td colspan="2">
-						<p>Dies ist eine Liste der empfohlenen Anwendungen für Heimanwender.</p>
-						<p>Wenn Sie den Installationsschaltfläche anklicken, werden alle aufgeführten
-Programme auf Ihrem System installiert. Sie können den Software Manager
-benutzen, um diese gesondert zu installieren.</p>
+						<p>Dies ist eine Liste geeigneter Anwendungen für Heimanwender.</p>
+						<p>Wenn Sie "Installieren" auswählen, werden alle aufgeführten Programme auf
+Ihrem System installiert. Einzeln können sie mit dem Software Manager
+installiert werden.</p>
 					</td>
 				</tr>
 				<tr><td colspan="2" class="app_title">Gimp</td></tr>
 				<tr>
 					<td>
 						<p>GIMP ist ein Akronym für GNU Image Manipulation Program. Es ist ein frei
-verteilbared Programm für Aufgaben wie Foto-Retusche, Bildkomposition und
+verteilbares Programm für Aufgaben wie Foto-Retusche, Bildkomposition und
 Bildbearbeitung.</p>
 						<p>Es hat viele Funktionen. Es kann als ein einfaches Malprogramm, als hoch
 qualitatives Foto-Retusche-Programm, als Online-Batch-Verarbeitungssystem,
-als Massenproduktion Bild-Renderer, ein Bild-Format-Konverter,
-etc. verwendet werden</p>
+als Bild-Renderer in Massenproduktion, als Bild-Format-Konverter,
+usw. verwendet werden</p>
 					</td>
 					<td rowspan="2"><img class="screenshot" alt="gimp" src="../link/screenshots/gimp.jpg" /></td>
 				</tr>
@@ -40,10 +40,10 @@ target="_blank">http://www.gimp.org</a></td>
 				<tr><td colspan="2" class="app_title">Inkscape</td></tr>
 				<tr>
 					<td>
-						<p>Inkscape ist ein Open-Source-Vektorgrafikeditor ähnlich wie Adobe
+						<p>Inkscape ist ein quelloffener Vektorgrafikeditor ähnlich wie Adobe
 Illustrator, Corel Draw, Freehand oder Xara X. Was Inkscape  von allen
 anderen unterscheide, ist die Verwendung von Scalable Vector Graphics (SVG),
-eine offene XML-basierte W3C-Standard, als das native Format .</p>
+einem offenen XML-basierte W3C-Standard.</p>
 					</td>
 					<td rowspan="2"><img class="screenshot" alt="inkscape" src="../link/screenshots/inkscape.jpg" /></td>
 				</tr>
@@ -54,15 +54,15 @@ target="_blank">https://inkscape.org</a></td>
 				<tr><td colspan="2" class="app_title">Shotwell / Digikam</td></tr>
 				<tr>
 					<td>
-						<p>Shotwell ist ein Bildorganisationsprogramm,  entwickelt für Ihr persönliche
+						<p>Shotwell ist ein Bildorganisationsprogramm für Ihr persönliches
 Fotomanagement.</p>
-						<p>Mit Shotwell können Sie Fotos und Videos von einer Digitalkamera direkt
-importieren. Shotwell sortiert automatisch Fotos und Videos nach Datum, und
-unterstützt Tagging. Seine Bildbearbeitungsfunktionen ermöglicht Benutzern
-Begradigungen, Zuschneidungen, sowie die Beseitigung roter Augen
-durchzuführen. Darüberhinaus lassen sich Ebenen und Farbbalance einstellen.</p>
-						<p>Bei SolydK ist das Programm Digikam installiert. Es hat die gleiche
-Funktionalität wie Shotwell</p>							
+						<p>Shotwell kann Fotos und Videos von einer Digitalkamera direkt
+importieren. Es sortiert automatisch Fotos und Videos nach Datum, und
+unterstützt Tagging. Seine Bildbearbeitungsfunktionen ermöglichen
+Begradigungen, Zuschneiden, die Beseitigung roter Augen sowie die
+Einstellung von Ebenen und Farbbalance.</p>
+						<p>Bei SolydK ist Digikam installiert. Es hat die gleiche Funktionalität wie
+Shotwell</p>							
 					</td>
 					<td rowspan="2"><img class="screenshot" alt="shotwell" src="../link/screenshots/shotwell.jpg" /></td>
 				</tr>
@@ -77,11 +77,10 @@ target="_blank">https://www.digikam.org</a></p>
 				<tr><td colspan="2" class="app_title">Clementine / Amarok</td></tr>
 				<tr>
 					<td>
-						<p>Clementine ist ein moderner Musikplayer und ein Organisationsprogramm für
-Musikdateien</p>
-						<p>Clementine ist eine Multiplattform-Musik-Player. Es wird von Amarok 1.4
-inspiriert, die sich auf eine schnelle und einfach zu bedienende
-Benutzeroberfläche für die Suche und Wiedergabe Ihrer Musik fokussierte.</p>
+						<p>Clementine ist ein Musikplayer und Organisationsprogramm für Musikdateien.</p>
+						<p>Clementine ist ein Multiplattform-Musik-Player. Es ist von Amarok 1.4
+inspiriert und konzentriert sich auf eine schnelle und einfach zu bedienende
+Benutzeroberfläche für die Suche und Wiedergabe Ihrer Musik.</p>
 						<p>Bei SolydK ist das Programm Amarok installiert. Es hat die gleiche
 Funktionalität wie Clementine</p>
 					</td>
@@ -99,7 +98,7 @@ target="_blank">https://amarok.kde.org</a></p>
 				<tr>
 					<td>
 						<p>Handbrake ist ein Werkzeug zum Konvertieren von Videos nahezu jeden Formates
-in eine eine Auswahl von modernen, weit unterstützten Codecs.</p>
+in eine eine Auswahl von modernen, weit verbreiteten Codecs.</p>
 					</td>
 					<td rowspan="2"><img class="screenshot" alt="handbrake" src="../link/screenshots/handbrake.jpg" /></td>
 				</tr>
@@ -110,10 +109,10 @@ target="_blank">https://handbrake.fr</a></td>
 				<tr><td colspan="2" class="app_title">SoundConverter</td></tr>
 				<tr>
 					<td>
-						<p>Soundconverter ist die führende Audio-Datei-Konverter. Er liest alles was
+						<p>Soundconverter ist der führende Audio-Datei-Konverter. Er liest alles was
 GStreamer lesen kann (Ogg Vorbis, AAC, MP3, FLAC, WAV, AVI, MPEG, MOV, M4A,
-AC3, DTS, ALAC, MPC, Shorten, APE, SID, MOD, XM, S3M, etc ... ), und
-schreibt in Opus, Ogg Vorbis, FLAC, WAV, AAC und MP3-Dateien.</p>
+AC3, DTS, ALAC, MPC, Shorten, APE, SID, MOD, XM, S3M, usw.), und schreibt
+die Formate Opus, Ogg Vorbis, FLAC, WAV, AAC und MP3.</p>
 					</td>
 					<td rowspan="2"><img class="screenshot" alt="soundconverter" src="../link/screenshots/soundconverter.jpg" /></td>
 				</tr>
@@ -125,7 +124,7 @@ target="_blank">http://soundconverter.org</a></td>
 				<tr>
 					<td>
 						<p>Pitivi ist ein kostenloser Video-Editor mit einer schönen und intuitiven
-Benutzerschnittstelle, einer sauberen Codebasis und einer fantastische
+Benutzerschnittstelle, einer sauberen Codebasis und einer fantastischen
 Community.</p>
 						<p>Bei SolydK ist Kdenlive installiert. Es hat die gleiche Funktionalität wie
 Pitivi</p>
@@ -143,8 +142,8 @@ target="_blank">https://kdenlive.org</a></p>
 				<tr><td colspan="2" class="app_title">Transmission / Ktorrent</td></tr>
 				<tr>
 					<td>
-						<p>Transmission ist ein BitTorrent-Client, der eine einfache Schnittstelle auf
-einem Cross-Plattform-Back-End anbietet.</p>
+						<p>Transmission ist ein BitTorrent-Client mit einer einfachen Schnittstelle auf
+einem Cross-Plattform-Back-End.</p>
 						<p>Bei SolydK ist Ktorrent installiert. Es hat die gleiche Funktionalität wie
 Transmission</p>
 					</td>
