--- a/po/translated/de/multimedia.html
+++ b/po/translated/de/multimedia.html
@@ -12,8 +12,8 @@
 			<table>
 				<tr>
 					<td colspan="2">
-						<p>Diese folgenden Multimedia-Codecs sind aus rechtlichen oder aus Gründen der
-Sicherheit nicht enthalten.</p>
+						<p>Die folgenden Multimedia-Codecs sind aus rechtlichen oder aus Gründen der
+Sicherheit nicht vorinstalliert.</p>
 					</td>
 				</tr>
 				<tr><td class="app_title">Flash</td></tr>
@@ -28,7 +28,7 @@ an. Allerdings gibt es immer noch Webseiten, die allein auf Flash setzen.</p>
 					<td class="app_homepage">
 						<div class="warning">
 							<p>Warnung:</p>
-							<p>Beachten Sie, dass Flash nicht Open Source ist. Einige Flash-Inhalte könnten
+							<p>Beachten Sie, dass Flash nicht quelloffen ist. Einige Flash-Inhalte könnten
 Ihr System beschädigen.</p>
 						</div>
 					</td>
@@ -36,13 +36,13 @@ Ihr System beschädigen.</p>
 				<tr><td class="app_title">CSS</td></tr>
 				<tr>
 					<td>
-						<p>Die meisten kommerziellen DVDs sind mit CSS (das Content Scramble System)
-verschlüsselt. um die Software welche für die  Wiedergabe einer DVD
-verantwortlich ist, in ihrem Funktionsumfang einzuschränken. </p>
-						<p>In SolydXK sind die für das Abspielen dieser verschlüsselte DVDs notwendigen
-Pakete nicht vorinstalliert.</p>
-						<p>Durch Anklicken der Installationschaltfläche unten werden die folgenden
-Pakete auf Ihrem System installiert werden:</p>
+						<p>Die meisten kommerziellen DVDs sind mit CSS (Content Scramble System)
+verschlüsselt. um die Software, die DVDs wiedergeben, in ihrem
+Funktionsumfang einzuschränken. </p>
+						<p>In SolydXK sind die für das Abspielen dieser verschlüsselten DVDs
+notwendigen Pakete nicht vorinstalliert.</p>
+						<p>Wenn Sie "Installieren" auswählen, werden die folgenden Pakete auf Ihrem
+System installiert:</p>
 						<ul>
 							<li>libdvdcss2</li>
 							<li>w32codecs or w64codecs</li>
@@ -53,8 +53,8 @@ Pakete auf Ihrem System installiert werden:</p>
 					<td class="app_homepage">
 						<div class="warning">
 							<p>Rechtlicher Hinweis:</p>
-							<p>Konsultieen Sie Ihre lokalen Gesetze, um sicherzustellen, dass die Nutzung
-von libdvdcss2 rechtmäßig ist.</p>
+							<p>Beachten Sie die lokalen Gesetze, um sicherzustellen, dass die Nutzung von
+libdvdcss2 bei Ihnen rechtmäßig ist.</p>
 						</div>
 					</td>
 				</tr>
