--- a/po/translated/de/system.html
+++ b/po/translated/de/system.html
@@ -14,9 +14,9 @@
 			<table>
 				<tr>
 					<td colspan=2>
-						<p>Wenn Sie den Installationsschaltfläche anklicken, werden alle aufgeführten
-Programme auf Ihrem System installiert. Sie können den Software Manager
-benutzen, um diese gesondert zu installieren.</p>
+						<p>Wenn Sie "Installieren" auswählen, werden alle aufgeführten Programme auf
+Ihrem System installiert. Einzeln können sie mit dem Software Manager
+installiert werden.</p>
 					</td>
 				</tr>
 				<tr><td colspan=2 class="app_title">Gparted</td></tr>
@@ -24,7 +24,7 @@ benutzen, um diese gesondert zu installieren.</p>
 					<td>
 						<p>GParted ist ein freier Partitioneditor zur grafischen Verwaltung Ihrer
 Festplattenpartitionen. Mit GParted können Sie Partitionen ohne Datenverlust
-kopieren und verschieben, sowie die Größe der Partitionen ändern.</p>
+kopieren und verschieben sowie ihre Größe ändern.</p>
 					</td>
 					<td rowspan=2><img class="screenshot" src="../link/screenshots/gparted.jpg" /></td>
 				</tr>
@@ -35,12 +35,11 @@ target="_blank">http://gparted.sourceforge.net</a></td>
 				<tr><td colspan=2 class="app_title">VirtualBox</td></tr>
 				<tr>
 					<td>
-						<p>VirtualBox ist eine Allzweckvirtualisierer für x86-Hardware und ist auf
-Server-, Desktop- und Embedded-Einsatz ausgerichtet. Die VirtualBox Paket
-installiert sich auf einem vorhandenen Host-Betriebssystem als
-Anwendung. Diese Host-Anwendung ermöglicht den Start und die Ausführung
-zusätzlicher Gastbetriebssysteme, jedes mit seiner eigenen virtuellen
-Umgebung.</p>
+						<p>VirtualBox ist eine Virtualisierungsumgebung für x86-Hardware und ist auf
+Server-, Desktop- und Embedded-Einsatz ausgerichtet. Das Paket installiert
+sich auf einem vorhandenen Host-Betriebssystem als Anwendung, die dann den
+Start und die Ausführung zusätzlicher Gastbetriebssysteme ermöglicht, jedes
+mit seiner eigenen virtuellen Umgebung.</p>
 					</td>
 					<td rowspan=2><img class="screenshot" src="../link/screenshots/virtualbox.jpg" /></td>
 				</tr>
