--- a/po/translated/de/welcome.html
+++ b/po/translated/de/welcome.html
@@ -6,36 +6,35 @@
   </head>
   <body>
     <div id="background"></div>
-	<h1 class="title">Willkommen zu SolydXK</h1>
+	<h1 class="title">Willkommen bei SolydXK</h1>
 
 	<div class="main">
 		<div class="content">
 			<p class="app_title">Danke, dass Sie SolydXK benutzen.</p>
-			<p>SolydXK ist ein Open Source Desktop-Betriebssystem für Unternehmen,
+			<p>SolydXK ist ein quelloffenes Desktop-Betriebssystem für Unternehmen,
 Organisationen und private Anwender. Sowohl SolydX und SolydK basieren auf
 Debian stable, um die größte Stabilität und Sicherheit zu gewährleisten.</p>
 			<p>
 				<table>
 					<tr>
-						<td><p class="alert">Bitte ziehen Sie eine Spende in Betracht. Ihre Spende ist uns in höchstem
-Maße willkommen und stellt sicher, dass wir weiter daran arbeiten können,
-SolydXK zu verbessern.</p></td>
+						<td><p class="alert">Bitte ziehen Sie eine Spende in Betracht. Ihre Spende ist Ausdruck Ihrer
+Wertschätzung für unsere Arbeit und stellt sicher, dass wir weiter daran
+arbeiten können, SolydXK zu verbessern.</p></td>
 						<td><a href="http://solydxk.com/contribute/donate/" target="_blank"><img alt="donate" src="../link/donate.gif" /></a></td>
 					</tr>
 				</table>
 			</p>
 			<p>Wir haben eine Liste empfohlener Software für Unternehmen und Heimanwender
-erstellt, die Sie während der nächsten paar Seiten installieren können.</p>
-			<p>Klicken Sie auf die <strong>nächste</strong> Schaltfläche, um zu beginnen.</p>
+erstellt, die Sie auf den nächsten Seiten installieren können.</p>
+			<p>Klicken Sie auf die <strong>Nächste</strong> Schaltfläche, um zu beginnen.</p>
 			<table>
 				<tr><td colspan="2" class="app_title">Software</td></tr>
 				<tr>
-					<td><p>	Die gesamte Software wird gebaut, gewartet und von der Gemeinschaft
-überprüft. Software Datenbanken namens "Repositories" werden verwendet, um
-mehr als 60.000 Software-Pakete anzubieten und zu pflegen. Insofern gibt es
-keine Notwendigkeit, Software von zweifelhaften Websites
-herunterzuladen. Sie suchen und installieren einfach die benötigte Software
-mit der Software-Manager.</p></td>
+					<td><p>	All diese Software wird von einer Gemeinschaft engagierter Menschen erstellt
+und gewartet. Software-Datenbanken namens "Repositories" enthalten die
+Paketquellen für mehr als 60.000 Software-Pakete. Deshalb ist es nicht
+notwendig, Software von zweifelhaften Websites herunterzuladen. Sie suchen
+und installieren einfach die benötigte Software mit der Software-Manager.</p></td>
 					<td rowspan="2"><img class="screenshot" alt="softwaremanager" src="../link/screenshots/softwaremanager.jpg" /></td>
 				</tr>
 				<tr>
@@ -44,9 +43,9 @@ mit der Software-Manager.</p></td>
 				<tr><td colspan="2" class="app_title">Hilfe</td></tr>
 				<tr>
 					<td><p>Wenn Sie neu bei SolydXK sind oder wenn Sie nicht weiterkommen, gibt es die
-SolydXK Community. Diese kann Ihnen dabei helfen, Ihr Problem zu lösen. Sie
-können die Forum-Suche nutzen, um herauszufinden, ob Ihr Problem bereits
-gelöst ist oder Sie starten ein neues Thema, um Hilfe zu erhalten.</p></td>
+SolydXK Community, die Ihnen helfen kann, Ihr Problem zu lösen. Sie können
+die Forum-Suche nutzen, um herauszufinden, ob Ihr Problem bereits gelöst ist
+oder Sie starten ein neues Thema mit der Bitte um Hilfe.</p></td>
 					<td rowspan="2"><img class="screenshot" alt="forum" src="../link/screenshots/forum.jpg" /></td>
 				</tr>
 				<tr>
@@ -55,8 +54,8 @@ target="_blank">http://forums.solydxk.com</a></td>
 				</tr>
 				<tr>
 					<td colspan="2">
-						<p>Folgende Kanäle werden verwendet, um auf mit den SolydX und SolydK
-Mitglieder Kontakt aufzunehmen:</p>
+						<p>Es gibt folgende Möglichkeiten, um mit anderen SolydX- und SolydK-Benutzern
+Kontakt aufzunehmen:</p>
 						<ul>
 							<li>E-mail : <a href="http://solydxk.com/news"
 target="_blank">http://solydxk.com/news</a></li>
