--- a/po/translated/de/wine.html
+++ b/po/translated/de/wine.html
@@ -14,29 +14,28 @@
 			<table>
 				<tr>
 					<td colspan=2>
-						<p>Wenn Sie den Installationsschaltfläche anklicken, werden alle aufgeführten
-Programme auf Ihrem System installiert. Sie können den Software Manager
-benutzen, um diese gesondert zu installieren.</p>
+						<p>Wenn Sie "Installieren" auswählen, werden alle aufgeführten Programme auf
+Ihrem System installiert. Einzeln können sie mit dem Software Manager
+installiert werden.</p>
 					</td>
 				</tr>
 				<tr><td colspan=2 class="app_title">PlayOnLinux</td></tr>
 				<tr>
 					<td>
-						<p>SolydXK kommt mit einer Vielzahl von Softwareprogrammen. Sollten Sie jedoch
-die richtige Software in unserem Repository nicht finden können und Sie MS
-Windows-Software verwenden müssen, dann können Sie diese Programmen mit
-PlayOnLinux installieren. Nicht alle Software kann auf diese Weise
-ausgeführt werden, aber eine große Anzahl von Software wird bereits
-unterstützt.</p>
-						<p>Sie können sich eine Anleitung auf <a
+						<p>SolydXK enthält eine Vielzahl von Programmen. Sollten Sie jedoch in den
+Paketquellen nicht das richtige finden, können Sie auch MS Windows-Software
+mit Hilfe von Wine und PlayOnLinux installieren. Eine große Anzahl von
+Software wird bereits unterstützt, aber dennoch funktioniert das nicht
+immer..</p>
+						<p>Sie können sich eine Anleitung zur <a
 href="http://solydxk.com/get-support/tutorials/#msoffice"
-target="_blank">mit dem Namen Installation von MS Office 2010 mit
-PlayOnLinux</a> auf unserer Webseite ansehen.</p>
+target="_blank">Installation von MS Office 2010 mit PlayOnLinux</a> auf
+unserer Webseite ansehen.</p>
 						<div class="warning">
 							<p>Durch die Nutzung dieser Software können Sie Ihr System anfällig für MS
-Windows Viren und Malware zu machen. Das Infektionsrisiko ist nicht höher
-als das unter einem nativen MS Windows.</p>
-							<p>Stellen Sie sicher, dass Sie Software nur von vertrauenswürdigen Quellen
+Windows Viren und Malware zu machen. Das Infektionsrisiko ist aber nicht
+höher als das unter einem nativen MS Windows.</p>
+							<p>Stellen Sie sicher, dass Sie Software nur aus vertrauenswürdigen Quellen
 installieren.</p>
 							<p>RInformieren Sie sich über das <a
 href="http://wiki.winehq.org/FAQ#head-1c91cac836dd52754c846d2ef62be4f346eebe87">Risiko
