--- a/po/translated/it/welcome.html
+++ b/po/translated/it/welcome.html
@@ -10,15 +10,15 @@
 
 	<div class="main">
 		<div class="content">
-			<p class="app_title">Thank you for using SolydXK</p>
+			<p class="app_title">Grazie per aver scelto SolydXK</p>
 			<p>SolydXK è un sistema operativo open source per desktop indirizzato ad utenti
 business, organizzazioni e utenti domestici. Sia SolydX che SolydK sono
 basate su Debian stable, che assicura il massimo in sicurezza e stabilità.</p>
 			<p>
 				<table>
 					<tr>
-						<td><p class="alert">Please, consider a donation. Your donation is very much appreciated, and
-ensures that we can continue improving SolydXK.</p></td>
+						<td><p class="alert">Ogni donazione è molto apprezzata e assicura la possibilità per noi di
+continuare a migliorare SolydXK.</p></td>
 						<td><a href="http://solydxk.com/contribute/donate/" target="_blank"><img alt="donate" src="../link/donate.gif" /></a></td>
 					</tr>
 				</table>
