--- a/po/translated/de/games.html
+++ b/po/translated/de/games.html
@@ -14,18 +14,18 @@
 			<table>
 				<tr>
 					<td colspan="2">
-						<p>Alle funktionieren und kein Spiel...</p>
-						<p>Wenn Sie den Installationsschaltfläche anklicken, werden alle
-aufgeführtenSpiele auf Ihrem System installiert. Sie können den Software
-Manager benutzen, um diese gesondert zu installieren.</p>
+						<p>Nur Arbeit und kein Spiel...</p>
+						<p>Wenn Sie "Installieren" auswählen, werden alle aufgeführten Spiele auf Ihrem
+System installiert. Einzeln können sie mit dem Software Manager installiert
+werden.</p>
 					</td>
 				</tr>
 				<tr><td colspan="2" class="app_title">Steam</td></tr>
 				<tr>
 					<td>
-						<p>Steam ist eine internetbasierte digitale Distribution, Verwaltung digitaler
-Rechte (DRM), Multiplayer-und Social-Networking-Plattform, die von der Valve
-Corporation entwickelt wurde.</p>
+						<p>Steam ist eine internetbasierte digitale Spiele-Plattform der Valve
+Corporation für Distribution, Verwaltung digitaler Rechte (DRM-),
+Multiplayer und Soziale Vernetzung.</p>
 					</td>
 					<td rowspan="2"><img class="screenshot" alt="steam" src="../link/screenshots/steam.jpg" /></td>
 				</tr>
@@ -39,8 +39,8 @@ target="_blank">http://store.steampowered.com</a></p>
 				<tr><td colspan="2" class="app_title">Minetest</td></tr>
 				<tr>
 					<td>
-						<p>Minetest ist eine unendliche Welt Block Sandbox-Spiel und ein Spiel-Engine,
-inspiriert von InfiniMiner, Minecraft und dergleichen.</p>
+						<p>Minetest ist ein Sandbox-Spiel mit einer unendlichen Welt aus Blöcken und
+eine Spiel-Engine, inspiriert von InfiniMiner, Minecraft und ahnlichem.</p>
 					</td>
 					<td rowspan="2"><img class="screenshot" alt="minetest" src="../link/screenshots/minetest.jpg" /></td>
 				</tr>
@@ -54,12 +54,11 @@ target="_blank">http://minetest.net</a></p>
 				<tr><td colspan="2" class="app_title">0 A.D.</td></tr>
 				<tr>
 					<td>
-						<p>0 AD (ausgesprochen "zero-ey-dee") ist ein freies, Open-Source, historische
-Echtzeit-Strategie (RTS) Spiel derzeit in der Entwicklung von Wildfire
+						<p>0 AD (ausgesprochen "zero-ey-dee") ist ein freies, quelloffenes historisches
+Echtzeit-Strategie-Spiel (RTS), derzeit in der Entwicklung von Wildfire
 Games, einer weltweiten Gruppe von freiwilligen Spiele-Entwicklern. Als
-Anführer einer antiken Zivilisation, müssen Sie die Ressourcen sammeln, die
-Sie benötigen, um eine Militärmacht zu begründen und Ihre Feinde zu
-beherrschen.</p>
+Anführer einer antiken Zivilisation müssen Sie die nötigen Ressourcen
+sammeln, um eine Militärmacht zu begründen und Ihre Feinde zu beherrschen.</p>
 					</td>
 					<td rowspan="2"><img class="screenshot" alt="0ad" src="../link/screenshots/0ad.jpg" /></td>
 				</tr>
@@ -73,14 +72,14 @@ target="_blank">http://play0ad.com</a></p>
 				<tr><td colspan="2" class="app_title">Die Schlacht um Wesnoth</td></tr>
 				<tr>
 					<td>
-						<p>Die Schlacht um Wesnoth ist ein rundenbasierte taktische Strategie-Spiel mit
-hohem Fantasy-Thema.</p>
-						<p>Bauen Sie eine große Armee, indem Sie nach und nach Rekruten in erprobten
-Veteranen verwandeln. In späteren Spielen, sammeln Sie Ihre härtesten
-Krieger und bilden eine tödliche Heer, dem sich niemand entgegenstellen
-kann! Wählen Sie Einheiten aus einem großen Pool von Spezialisten und
-stellen Sie eine handverlesene Truppe mit den richtigen Stärken zusammen, um
-gut auf verschiedenen Terrains gegen alle Arten von Opposition zu kämpfen.</p>
+						<p>Die Schlacht um Wesnoth ist ein rundenbasiertes taktisches Strategie-Spiel
+mit Fantasy-Thema.</p>
+						<p>Bauen Sie eine große Armee, in der Rekruten zu erprobte Veteranen werden. In
+späteren Spielen sammeln Sie Ihre härtesten Krieger und bilden ein tödliches
+Heer, dem sich niemand entgegenstellen kann! Wählen Sie Einheiten aus einem
+großen Angebot von Spezialisten und stellen Sie eine handverlesene Truppe
+mit den richtigen Stärken zusammen, um gut auf verschiedenen Terrains gegen
+alle Arten von Gegnern zu kämpfen.</p>
 					</td>
 					<td rowspan="2"><img class="screenshot" alt="wesnoth" src="../link/screenshots/wesnoth.jpg" /></td>
 				</tr>
@@ -96,9 +95,9 @@ target="_blank">http://www.wesnoth.org</a></p>
 					<td>
 						<p>Sauerbraten ist ein kostenloser Multiplayer und Singleplayer-Ego-Shooter,
 der Nachfolger von Cube FPS.</p>
-						<p>Ähnlich wie beim ursprünglichen Cube läßt sich Spiels als Spaß- und
-Todesspielsystem alter Schule begreifen. Darüberhinaus erlaubt es eine
-kooperative Karten/Geometrie Bearbeitung.</p>
+						<p>Ähnlich wie das ursprüngliche Cube handelt es sich um ein Deathmatch alter
+Schule. Darüberhinaus erlaubt es eine kooperative
+Karten/Geometrie-Bearbeitung im Spiel.</p>
 					</td>
 					<td rowspan="2"><img class="screenshot" alt="sauerbraten" src="../link/screenshots/sauerbraten.jpg" /></td>
 				</tr>
@@ -112,9 +111,9 @@ target="_blank">http://sauerbraten.org</a></p>
 				<tr><td colspan="2" class="app_title">Neverball</td></tr>
 				<tr>
 					<td>
-						<p>Neigen Sie den Boden um einen Ball durch einen Hindernislauf zu rollen,
-bevor die Zeit abläuft. Neverball ist Teil Puzzle-Spiel, Teil-Action-Spiel,
-und im Ganzen ein Test Ihrer Geschicklichkeit.</p>
+						<p>Neigen Sie den Boden, um einen Ball durch einen Hindernislauf zu rollen,
+bevor die Zeit abläuft. Neverball ist teils Puzzle-Spiel, teils
+Action-Spiel, und testet Ihre Geschicklichkeit.</p>
 					</td>
 					<td rowspan="2"><img class="screenshot" alt="neverball" src="../link/screenshots/neverball.jpg" /></td>
 				</tr>
@@ -128,8 +127,8 @@ target="_blank">http://neverball.org</a></p>
 				<tr><td colspan="2" class="app_title">Super Tux Kart</td></tr>
 				<tr>
 					<td>
-						<p>SuperTuxKart ist ein kostenloses 3D-Kart-Rennspiel, bei dennen Sie viele
-Rennparcours, Figuren und Einzelteile ausprobieren können. Viel Spaß!</p>
+						<p>SuperTuxKart ist ein quelloffenes 3D-Kart-Rennspiel, mit vielen
+Rennparcours, Figuren und Einzelteilen. Viel Spaß!</p>
 					</td>
 					<td rowspan="2"><img class="screenshot" alt="supertuxkart" src="../link/screenshots/supertuxkart.jpg" /></td>
 				</tr>
