--- a/po/translated/de/libreoffice.html
+++ b/po/translated/de/libreoffice.html
@@ -14,24 +14,24 @@
 			<table>
 				<tr>
 					<td colspan=2>
-						<p>Wenn Sie den Installationsschaltfläche anklicken, werden alle aufgeführten
-Programme auf Ihrem System installiert. Sie können den Software Manager
-benutzen, um diese gesondert zu installieren.</p>
+						<p>Wenn Sie "Installieren" auswählen, werden alle aufgeführten Programme auf
+Ihrem System installiert. Einzeln können sie mit dem Software Manager
+installiert werden.</p>
 					</td>
 				</tr>
 				<tr><td colspan=2 class="app_title">LibreOffice</td></tr>
 				<tr>
 					<td>
-						<p>SolydXK kommt mit der Libreoffice-Suite vorinstalliert. Ihre Stabilität und
+						<p>Die Libreoffice-Suiteiost in SolydXK vorinstalliert. Ihre Stabilität und
 Ausstattung ist für die meisten Menschen und vor allem für Unternehmen gut
-geeignet. Sollten Sie allerdingseinige Funktionen vermissen oder jeweils die
-aktuelleste Version vonLibreoffice verwenden, können Sie Libreoffice aus dem
-Backports-Repository installieren.</p>
+geeignet. Sollten Sie einige Funktionen vermissen oder jeweils die
+aktuelleste Version von Libreoffice verwenden wollen, können Sie Libreoffice
+aus den Backports-Paketquellen installieren.</p>
 						<p>Backports sind extra kompilierte neue Pakete für die aktuelle stabile
 Umgebung. Dadurch können sie ohne neue Bibliotheken laufen.</p>
-						<p class="warning">Sie können zwar auch darüberhinaus die jeweils neueste Software aus dem
-Backports-Repository installieren, jeoch erhöht sich dadurch das Risiko von
-Inkompatiblitäten.</p>
+						<p class="warning">Sie können zwar auch darüberhinaus die jeweils neueste Software aus den
+Backports-Paketquellen installieren, jeoch erhöht sich dadurch das Risiko
+von Inkompatiblitäten.</p>
 					</td>
 					<td rowspan=2><img class="screenshot" src="../link/screenshots/libreoffice.jpg" /></td>
 				</tr>
